--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.4.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "sort-by": "^1.2.0"
   },
