--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.1",
     "daisyui": "^2.51.5",
     "firebase": "^9.20.0",
     "localforage": "^1.10.0",
